--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css?v=2.6">
+    <link rel="stylesheet" href="css/style.css?v=3.1">
 </head>
 
 <body>
@@ -47,9 +47,11 @@
 
     <main class="flex-grow-1">
         <!-- Hero Section -->
-        <section class="hero-section bg-primary text-white py-5 mt-5">
+        <section class="hero-section bg-primary text-white py-5 mt-5" id="homepageHero">
             <div class="container py-5 text-center">
+
                 <h1 class="display-3 fw-bold mb-3">Welcome to Community Showcase</h1>
+
                 <p class="lead mb-4 fs-4">Discover the amazing projects and digital documents created by our
                     talented
                     students.</p>
@@ -131,10 +133,13 @@
         </div>
     </footer>
 
+
+
+
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=2.7"></script>
+    <script src="js/script.js?v=3.1"></script>
 </body>
 
 </html>
