--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css?v=2.6">
+    <link rel="stylesheet" href="css/style.css?v=3.1">
 </head>
 
 <body>
@@ -47,32 +47,33 @@
 
     <main class="flex-grow-1">
         <!-- Profile Section -->
-        <section class="py-5 mt-5">
-            <div class="container">
-                <!-- Profile Banner Area -->
-                <div class="profile-banner-container border shadow-sm mb-4" id="profileBanner">
-                    <button class="banner-upload-btn shadow-sm" data-bs-toggle="modal"
-                        data-bs-target="#uploadBannerModal">
-                        <i class="bi bi-image me-2"></i>Change Banner
-                    </button>
-                </div>
+        <section class="profile-section py-5 mt-5">
+            <!-- Profile Banner Area -->
+            <div class="profile-banner-container" id="profileBanner">
+                <button class="banner-upload-btn" data-bs-toggle="modal" data-bs-target="#uploadBannerModal">
+                    <i class="bi bi-camera-fill me-2"></i>Change Banner
+                </button>
+            </div>
 
+            <div class="container">
                 <div class="row">
+
 
                     <!-- Profile Card -->
                     <div class="col-lg-4 mb-4">
-                        <div class="card shadow-sm border-0 h-100">
+                        <div class="card shadow border-0 h-100">
+
                             <div class="card-body text-center p-4">
                                 <!-- Profile Picture -->
-                                <div class="position-relative d-inline-block mb-3">
+                                <div class="profile-img-container mb-3 d-inline-block">
                                     <img src="https://via.placeholder.com/200x200/4a90e2/ffffff?text=Profile"
                                         alt="Profile Picture" class="rounded-circle img-fluid profile-img-large">
-                                    <button class="btn btn-sm btn-primary rounded-circle position-absolute"
-                                        style="bottom: 0; right: 0; width: 40px; height: 40px;" data-bs-toggle="modal"
+                                    <button class="btn btn-sm btn-primary profile-photo-edit-btn" data-bs-toggle="modal"
                                         data-bs-target="#uploadPhotoModal" title="Change Profile Picture">
-                                        <i class="bi bi-camera"></i>
+                                        <i class="bi bi-pencil-fill"></i>
                                     </button>
                                 </div>
+
 
                                 <h3 class="fw-bold mb-1" id="profileName">Loading...</h3>
                                 <p class="text-muted mb-3" id="profileJobTitle">Loading...</p>
@@ -149,7 +150,7 @@
                         </div>
 
                         <!-- Contact Information -->
-                        <div class="card shadow-sm border-0">
+                        <div class="card shadow-sm border-0 mb-4">
                             <div class="card-header bg-white border-bottom py-3">
                                 <h5 class="mb-0 fw-bold">
                                     <i class="bi bi-envelope me-2 text-primary"></i>Contact Information
@@ -172,6 +173,38 @@
                                     data-bs-target="#editContactModal">
                                     <i class="bi bi-pencil me-1"></i>Edit Contact
                                 </button>
+                            </div>
+                        </div>
+
+                        <!-- Projects Collection -->
+                        <div class="card shadow-sm border-0 mb-4">
+                            <div
+                                class="card-header bg-white border-bottom py-3 d-flex justify-content-between align-items-center">
+                                <h5 class="mb-0 fw-bold">
+                                    <i class="bi bi-folder me-2 text-primary"></i>My Projects
+                                </h5>
+                                <a href="projects.html" class="btn btn-sm btn-outline-primary">Manage Projects</a>
+                            </div>
+                            <div class="card-body">
+                                <div id="profileProjectsContainer" class="row g-3">
+                                    <p class="text-muted">Loading projects...</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Documents Collection -->
+                        <div class="card shadow-sm border-0">
+                            <div
+                                class="card-header bg-white border-bottom py-3 d-flex justify-content-between align-items-center">
+                                <h5 class="mb-0 fw-bold">
+                                    <i class="bi bi-file-earmark-text me-2 text-primary"></i>Shared Documents
+                                </h5>
+                                <a href="documents.html" class="btn btn-sm btn-outline-primary">Manage Documents</a>
+                            </div>
+                            <div class="card-body">
+                                <div id="profileDocumentsContainer" class="row g-3">
+                                    <p class="text-muted">Loading documents...</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -316,7 +349,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
-            <p class="mb-0">&copy; 2024 DevShowcase. All rights reserved.</p>
+            <p class="mb-0">&copy; 2026 DevShowcase. All rights reserved.</p>
         </div>
     </footer>
 
@@ -377,7 +410,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=2.6"></script>
+    <script src="js/script.js?v=3.1"></script>
 </body>
 
 </html>
