--- a/register.html
+++ b/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,9 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css?v=2.6">
+    <link rel="stylesheet" href="css/style.css?v=3.0">
 </head>
+
 <body class="auth-body">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -50,21 +52,18 @@
                             <!-- Register Form -->
                             <form id="registerForm" enctype="multipart/form-data">
                                 <div class="mb-3">
-                                    <label for="username" class="form-label fw-semibold">Username <span class="text-danger">*</span></label>
+                                    <label for="username" class="form-label fw-semibold">Username <span
+                                            class="text-danger">*</span></label>
                                     <div class="input-group">
                                         <span class="input-group-text bg-light">
                                             <i class="bi bi-person-badge text-primary"></i>
                                         </span>
-                                        <input type="text" 
-                                               class="form-control" 
-                                               id="username"
-                                               name="username"
-                                               placeholder="Choose a username" 
-                                               required
-                                               pattern="[a-zA-Z0-9_]+"
-                                               title="Only letters, numbers, and underscores allowed">
+                                        <input type="text" class="form-control" id="username" name="username"
+                                            placeholder="Choose a username" required pattern="[a-zA-Z0-9_]+"
+                                            title="Only letters, numbers, and underscores allowed">
                                     </div>
-                                    <small class="text-muted">At least 3 characters, letters, numbers, and underscores only</small>
+                                    <small class="text-muted">At least 3 characters, letters, numbers, and underscores
+                                        only</small>
                                 </div>
 
                                 <div class="row">
@@ -74,11 +73,8 @@
                                             <span class="input-group-text bg-light">
                                                 <i class="bi bi-person text-primary"></i>
                                             </span>
-                                            <input type="text" 
-                                                   class="form-control" 
-                                                   id="firstName"
-                                                   name="first_name"
-                                                   placeholder="First name">
+                                            <input type="text" class="form-control" id="firstName" name="first_name"
+                                                placeholder="First name">
                                         </div>
                                     </div>
                                     <div class="col-md-6 mb-3">
@@ -87,27 +83,21 @@
                                             <span class="input-group-text bg-light">
                                                 <i class="bi bi-person text-primary"></i>
                                             </span>
-                                            <input type="text" 
-                                                   class="form-control" 
-                                                   id="lastName"
-                                                   name="last_name"
-                                                   placeholder="Last name">
+                                            <input type="text" class="form-control" id="lastName" name="last_name"
+                                                placeholder="Last name">
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="regEmail" class="form-label fw-semibold">Email Address <span class="text-danger">*</span></label>
+                                    <label for="regEmail" class="form-label fw-semibold">Email Address <span
+                                            class="text-danger">*</span></label>
                                     <div class="input-group">
                                         <span class="input-group-text bg-light">
                                             <i class="bi bi-envelope text-primary"></i>
                                         </span>
-                                        <input type="email" 
-                                               class="form-control" 
-                                               id="regEmail"
-                                               name="email"
-                                               placeholder="Enter your email" 
-                                               required>
+                                        <input type="email" class="form-control" id="regEmail" name="email"
+                                            placeholder="Enter your email" required>
                                     </div>
                                 </div>
 
@@ -117,15 +107,9 @@
                                         <span class="input-group-text bg-light">
                                             <i class="bi bi-lock text-primary"></i>
                                         </span>
-                                        <input type="password" 
-                                               class="form-control" 
-                                               id="regPassword"
-                                               name="password"
-                                               placeholder="Create a password" 
-                                               required>
-                                        <button class="btn btn-outline-secondary" 
-                                                type="button" 
-                                                id="toggleRegPassword">
+                                        <input type="password" class="form-control" id="regPassword" name="password"
+                                            placeholder="Create a password" required>
+                                        <button class="btn btn-outline-secondary" type="button" id="toggleRegPassword">
                                             <i class="bi bi-eye"></i>
                                         </button>
                                     </div>
@@ -138,18 +122,15 @@
                                         <span class="input-group-text bg-light">
                                             <i class="bi bi-lock-fill text-primary"></i>
                                         </span>
-                                        <input type="password" 
-                                               class="form-control" 
-                                               id="confirmPassword"
-                                               name="confirm_password"
-                                               placeholder="Confirm your password" 
-                                               required>
+                                        <input type="password" class="form-control" id="confirmPassword"
+                                            name="confirm_password" placeholder="Confirm your password" required>
                                     </div>
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="bio" class="form-label fw-semibold">Bio (Optional)</label>
-                                    <textarea class="form-control" id="bio" name="bio" rows="3" placeholder="Tell us about yourself..."></textarea>
+                                    <textarea class="form-control" id="bio" name="bio" rows="3"
+                                        placeholder="Tell us about yourself..."></textarea>
                                 </div>
 
                                 <div class="mb-3">
@@ -158,30 +139,22 @@
                                         <span class="input-group-text bg-light">
                                             <i class="bi bi-github text-primary"></i>
                                         </span>
-                                        <input type="url" 
-                                               class="form-control" 
-                                               id="githubUrl"
-                                               name="github_url"
-                                               placeholder="https://github.com/username">
+                                        <input type="url" class="form-control" id="githubUrl" name="github_url"
+                                            placeholder="https://github.com/username">
                                     </div>
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="jobTitle" class="form-label fw-semibold">Job Title (Optional)</label>
-                                    <input type="text" 
-                                           class="form-control" 
-                                           id="jobTitle"
-                                           name="job_title"
-                                           placeholder="e.g., Full Stack Developer">
+                                    <input type="text" class="form-control" id="jobTitle" name="job_title"
+                                        placeholder="e.g., Full Stack Developer">
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="profilePhoto" class="form-label fw-semibold">Profile Photo (Optional)</label>
-                                    <input type="file" 
-                                           class="form-control" 
-                                           id="profilePhoto"
-                                           name="profile_photo"
-                                           accept="image/*">
+                                    <label for="profilePhoto" class="form-label fw-semibold">Profile Photo
+                                        (Optional)</label>
+                                    <input type="file" class="form-control" id="profilePhoto" name="profile_photo"
+                                        accept="image/*">
                                     <small class="text-muted">Max size: 5MB. Allowed: JPG, PNG, GIF, WebP</small>
                                 </div>
 
@@ -203,8 +176,9 @@
 
                             <div class="text-center">
                                 <p class="mb-0 text-muted">
-                                    Already have an account? 
-                                    <a href="login.html" class="text-decoration-none fw-semibold text-primary">Sign In</a>
+                                    Already have an account?
+                                    <a href="login.html" class="text-decoration-none fw-semibold text-primary">Sign
+                                        In</a>
                                 </p>
                             </div>
                         </div>
@@ -217,14 +191,14 @@
     <!-- Footer -->
     <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
-            <p class="mb-0">&copy; 2024 DevShowcase. All rights reserved.</p>
+            <p class="mb-0">&copy; 2026 DevShowcase. All rights reserved.</p>
         </div>
     </footer>
 
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=2.6"></script>
+    <script src="js/script.js?v=3.0"></script>
 </body>
-</html>
 
+</html>
